--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ DEBUG=True
 
 
 #DataBase configuration
-DB_NAME=foodonline_db
+DB_NAME=Newdatabase_db
 DB_PASSWORD=Fernandez40@
 DB_USER=postgres
 DB_HOST=localhost
