--- a/.env
+++ b/.env
@@ -8,3 +8,11 @@ DB_NAME=Newdatabase_db
 DB_PASSWORD=Fernandez40@
 DB_USER=postgres
 DB_HOST=localhost
+
+
+# Email configuration
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=django.projecttech215@gmail.com
+EMAIL_HOST_PASSWORD=Fernandez40@
+EMAIL_USE_TLS=True
