--- a/.env
+++ b/.env
@@ -11,8 +11,11 @@ DB_HOST=localhost
 
 
 # Email configuration
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_HOST_USER=django.projecttech215@gmail.com
-EMAIL_HOST_PASSWORD=Fernandez40@
-EMAIL_USE_TLS=True
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_HOST_USER=projecttech215@gmail.com
+# EMAIL_HOST_PASSWORD=gqomodknbcggdjjj
+# EMAIL_USE_TLS=True
+
+
+
